Fanbase map contact form

--- a/other/fanbase_map/index.html
+++ b/other/fanbase_map/index.html
@@ -70,23 +70,8 @@
 <p class="note">View <a href="http://maps.google.com/maps/ms?ie=UTF8&amp;hl=en&amp;msa=0&amp;msid=213043650577356915440.00049e2b3dfc0ccd7797e&amp;ll=32.546813,5.976563&amp;spn=94.90013,281.25&amp;z=2&amp;source=embed">EnterTheSoulAsylum.com – Fanbase Map</a> on Google Maps.</p>
 
 
-<p>To get your own marker on the map, fill in the form below and we will put you there as soon as possible.</p>
-<form method="post" action="">
-	<table class="horizontal"><tbody><tr><th><label for="name">Name and/or Forum Username</label></th>
-				<td><input type="text" name="name" id="name" style="width: 20em;"></td>
-			</tr><tr><th><label for="location">Location</label></th>
-				<td><input type="text" name="location" id="location" style="width: 20em;"></td>
-			</tr><tr><th><label for="trivia">Trivia</label></th>
-				<td>
-					<textarea name="trivia" id="trivia" style="height: 10em; width: 20em;"></textarea><span class="note" style="vertical-align: top">(Optional)</span>
-				</td>
-			</tr><tr style="display: none"><th><label for="leave">Leave Empty</label></th>
-				<td>
-					<input type="text" name="leave" id="leave" style="width: 20em;"><span class="note">(for anti-spam purposes)</span>
-				</td>
-			</tr><tr><th></th>
-				<td><button type="submit">Submit</button></td>
-			</tr></tbody></table></form>							</div>
+<p>To get your own marker on the map, <a href="mailto:jim@enterthesoulasylum.com">send us an email</a> and we will put you there as soon as possible.</p>
+										</div>
 			<hr><p id="footer">
 	<a href="/about/">About</a> • <a href="/about/#credits">Credits</a> • <a href="/about/#contact">Contact</a>
 </p>		</div></body></html>
