Dynamic record preview content

--- a/discography/albums/index.html
+++ b/discography/albums/index.html
@@ -183,12 +183,7 @@
 	
 		<div class="preview">
 
-			<table class="horizontal"><tbody><tr><th>Trivia</th>
-				<td>
-					<i>Rough Air</i> was originally considered as the title of this album. 
-					<a href="/discography/albums/delayed_reaction/#trivia" class="more">More</a>
-				</td>
-			</tr><tr><th>Singles</th>
+			<table class="horizontal"><tbody><tr><th>Singles</th>
 				<td>
 											<a href="/discography/singles/gravity/">Gravity</a> 
 									</td><td>
@@ -309,17 +304,7 @@
 	
 		<div class="preview">
 
-			<table class="horizontal"><tbody><tr><th>Trivia</th>
-				<td>
-					The album's co-producer, John Fields performed with Soul Asylum on bass during the majority of their 2006 shows. 
-					<a href="/discography/albums/the_silver_lining/#trivia" class="more">More</a>
-				</td>
-			</tr><tr><th>Charts</th>
-				<td>
-					Peaked at #127 on Billboard 200. 
-					<a href="/discography/albums/the_silver_lining/#charts" class="more">More</a>
-				</td>
-			</tr><tr><th>Singles</th>
+			<table class="horizontal"><tbody><tr><th>Singles</th>
 				<td>
 											<a href="/discography/singles/stand_up_and_be_strong/">Stand Up and Be Strong</a> 
 									</td><td>
@@ -438,17 +423,7 @@
 	
 		<div class="preview">
 
-			<table class="horizontal"><tbody><tr><th>Trivia</th>
-				<td>
-					Was marketed in part through the distribution of chocolate bars (resembling Hershey's) labeled “Candy From A Stranger”. 
-					<a href="/discography/albums/candy_from_a_stranger/#trivia" class="more">More</a>
-				</td>
-			</tr><tr><th>Charts</th>
-				<td>
-					Peaked at #121 on Billboard 200. 
-					<a href="/discography/albums/candy_from_a_stranger/#charts" class="more">More</a>
-				</td>
-			</tr><tr><th>Singles</th>
+			<table class="horizontal"><tbody><tr><th>Singles</th>
 				<td>
 											<a href="/discography/singles/i_will_still_be_laughing/">I Will Still Be Laughing</a> 
 											<a href="/discography/singles/close/">Close</a> 
@@ -559,17 +534,7 @@
 	
 		<div class="preview">
 
-			<table class="horizontal"><tbody><tr><th>Trivia</th>
-				<td>
-					Was supposed to be recorded at <a href="http://en.wikipedia.org/wiki/Skywalker_Ranch">Skywalker Ranch</a> outside Nicasio, California, but this was changed after George Lucas lost a zoning battle with the city. 
-					<a href="/discography/albums/let_your_dim_light_shine/#trivia" class="more">More</a>
-				</td>
-			</tr><tr><th>Charts</th>
-				<td>
-					Peaked at #6 on Billboard 200. 
-					<a href="/discography/albums/let_your_dim_light_shine/#charts" class="more">More</a>
-				</td>
-			</tr><tr><th>Singles</th>
+			<table class="horizontal"><tbody><tr><th>Singles</th>
 				<td>
 											<a href="/discography/singles/misery/">Misery</a> 
 											<a href="/discography/singles/just_like_anyone/">Just Like Anyone</a> 
@@ -693,17 +658,7 @@
 	
 		<div class="preview">
 
-			<table class="horizontal"><tbody><tr><th>Trivia</th>
-				<td>
-					Was certified double platinum (2 million copies sold) in 1993 and has since gone triple platinum. 
-					<a href="/discography/albums/grave_dancers_union/#trivia" class="more">More</a>
-				</td>
-			</tr><tr><th>Charts</th>
-				<td>
-					Peaked at #11 on Billboard 200. 
-					<a href="/discography/albums/grave_dancers_union/#charts" class="more">More</a>
-				</td>
-			</tr><tr><th>Singles</th>
+			<table class="horizontal"><tbody><tr><th>Singles</th>
 				<td>
 											<a href="/discography/singles/somebody_to_shove/">Somebody To Shove</a> 
 											<a href="/discography/singles/black_gold/">Black Gold</a> 
@@ -923,14 +878,7 @@
 	
 
 	
-		<div class="preview">
-
-			<table class="horizontal"><tbody><tr><th>Trivia</th>
-				<td>
-					Included covers of Janis Joplin's <a href="/discography/songs/move_over">Move Over</a> and Foreigner's <a href="/discography/songs/jukebox_hero">Jukebox Hero</a> on the UK album version, but Secret No More and Artifical Heart were omitted in their place. 
-					<a href="/discography/albums/clam_dip_and_other_delights/#trivia" class="more">More</a>
-				</td>
-			</tr></tbody></table></div>
+		
 
 	
 	
@@ -1011,12 +959,7 @@
 	
 		<div class="preview">
 
-			<table class="horizontal"><tbody><tr><th>Trivia</th>
-				<td>
-					Some of the vinyl releases of this album contained a hidden jockstrap on the picture of the album cover. 
-					<a href="/discography/albums/hang_time/#trivia" class="more">More</a>
-				</td>
-			</tr><tr><th>Singles</th>
+			<table class="horizontal"><tbody><tr><th>Singles</th>
 				<td>
 											<a href="/discography/singles/sometime_to_return/">Sometime To Return</a> 
 											<a href="/discography/singles/cartoon/">Cartoon</a> 
@@ -1130,14 +1073,7 @@
 	
 
 	
-		<div class="preview">
-
-			<table class="horizontal"><tbody><tr><th>Trivia</th>
-				<td>
-					Sold 8,102 vinyls, 5,502 cassettes and 3,793 CDs before Soul Asylum signed to A&amp;M Records. 
-					<a href="/discography/albums/while_you_were_out/#trivia" class="more">More</a>
-				</td>
-			</tr></tbody></table></div>
+		
 
 	
 	
@@ -1238,12 +1174,7 @@
 	
 		<div class="preview">
 
-			<table class="horizontal"><tbody><tr><th>Trivia</th>
-				<td>
-					Sold 10,206 vinyl copies and 4,920 cassettes before being released on CD in 1988. 
-					<a href="/discography/albums/made_to_be_broken/#trivia" class="more">More</a>
-				</td>
-			</tr><tr><th>Singles</th>
+			<table class="horizontal"><tbody><tr><th>Singles</th>
 				<td>
 											<a href="/discography/singles/tied_to_the_tracks/">Tied To the Tracks</a> 
 									</td><td>
@@ -1357,14 +1288,7 @@
 	
 
 	
-		<div class="preview">
-
-			<table class="horizontal"><tbody><tr><th>Trivia</th>
-				<td>
-					Other titles considered for this album were <i>To the Root,</i> <i>Life of the Party</i>, and <i>Coyote Love</i>. 
-					<a href="/discography/albums/say_what_you_will..._everything_can_happen/#trivia" class="more">More</a>
-				</td>
-			</tr></tbody></table></div>
+		
 
 	
 	
