--- a/about/index.html
+++ b/about/index.html
@@ -100,6 +100,9 @@
 		<li>Numerous photos of memorabilia from the <a href="http://www.mnhs.org/">Minnesota Historical Society</a>.</li>
 	</ul><p>Finally, none of this would be possible without the hard work of our favorite band, Soul Asylum, whose dedication over the past four decades has provided countless people from all over the world with tremendous joy. Thank you for everything!</p>
 
+<h2>Contact</h2>
+<p>To get in touch with us, either use <a href="/forum/">the forum</a> or <a href="mailto:jim@enterthesoulasylum.com">send us an email</a>.</p>
+
 							</div>
 			<hr><p id="footer">
 	<a href="/about/">About</a> • <a href="/about/#credits">Credits</a> • <a href="/about/#contact">Contact</a>
