--- a/forum/index.html
+++ b/forum/index.html
@@ -114,14 +114,75 @@ if(navigator.userAgent && navigator.userAgent.indexOf('Mac OS X') > 0)
 }
 
 // ]]>
-</script><script type="text/javascript" src="./styles/acidtech/template/ca_scripts.js"></script></head><body class="ltr">
+</script><script type="text/javascript" src="./styles/acidtech/template/ca_scripts.js"></script>
+<link rel="stylesheet" type="text/css" href="/css/header.css">
+</head><body class="ltr" style="background-color: black; background-image: none;">
+
+<div id="header">
+	<h1 id="site-title"><a href="/">Enter the Soul Asylum</a></h1>
+	<ul id="menu"><li id="menu-discography">
+			<a href="/discography/">Discography</a>
+			<ul><li><a href="/discography/albums/">Albums</a></li>
+				<li><a href="/discography/compilations/">Compilations</a></li>
+				<li><a href="/discography/miscellaneous/">Miscellaneous</a></li>
+				<li><a href="/discography/singles/">Singles</a></li>
+				<li><a href="/discography/songs/">Songs</a></li>
+				<li><a href="/discography/soundtracks/">Soundtracks</a></li>
+				<li><a href="/discography/unreleased/">Unreleased</a></li>
+			</ul></li>
+		<li id="menu-shows">
+			<a href="/shows/">Shows</a>
+			<ul><li><a href="/shows/#upcoming">Upcoming </a></li>
+				<li><a href="/shows/#archive">Archive</a></li>
+				
+			</ul></li>
+		<li id="menu-biography">
+			<a href="/biography/" id="biography">Biography</a>
+			<ul><li><a href="/biography/#history">History</a></li>
+				<li><a href="/biography/#current_members">Current Members</a></li>
+				<li><a href="/biography/#former_members">Former Members</a></li>
+			</ul></li>
+		<li id="menu-forum">
+			<a href="/forum/">Forum</a>
+			<ul><li><a href="/forum/viewforum.php?f=1">General Discussion</a></li>
+				<li><a href="/forum/viewforum.php?f=2">On the Road</a></li>
+				<li><a href="/forum/viewforum.php?f=5">Related Bands</a></li>
+				<li><a href="/forum/viewforum.php?f=6">Off-Topic</a></li>
+				<li><a href="/forum/viewforum.php?f=3">Content Discussion</a></li>
+				<li><a href="/forum/viewforum.php?f=4">Website/Forum Feedback</a></li>
+			</ul></li>
+		<li id="menu-chat">
+									<a href="/chat/">
+				Chat
+								</a>
+			<ul><li><a href="/chat/">Enter</a></li>
+				<li><a href="/other/chat_schedule/">Schedule</a></li>
+			</ul></li>
+		<li id="menu-other">
+			<a href="/other/">Other Delights</a>
+			<ul><li><a href="/other/articles/">Articles</a></li>
+				<li><a href="/other/fanbase_map/">Fanbase Map</a></li>
+				<li><a href="/other/news/">News</a></li>
+				
+			</ul></li>
+		<li id="menu-official">
+			<a href="/about/">About</a>
+			<ul><li><a href="/about/">About</a></li>
+				<li><a href="http://www.montereyinternational.net/artists/soulasylum/">Booking</a></li>
+				<li><a href="http://www.facebook.com/soulasylum">Facebook</a></li>
+				<li><a href="http://www.429records.com/sites/429records/429details/d_soulasylum.asp">Label</a></li>
+				<li><a href="http://www.soulasylum.com/contact/">Management</a></li>
+				<li><a href="http://www.swag-inc.com/shop/soulasylum/apparel-1.html">Merchandise</a></li>
+				<li><a href="http://www.myspace.com/soulasylum">MySpace</a></li>
+				<li><a href="http://www.soulasylum.com">SoulAsylum.com</a></li>
+				<li><a href="http://www.twitter.com/Soulasylum">Twitter</a></li>
+			</ul></li>
+	</ul><p id="karl"><a href="/karl/">Karl</a></p>
+</div>
 
 <a name="top"></a>
 
-<table border="0" cellspacing="0" cellpadding="0" width="100%" id="maintable" align="center"><tr><td id="logorow" align="center"><div id="logo-left"><div id="logo-right">
-		<a href="http://www.enterthesoulasylum.com" title="Enter The Soul Asylum" id="logo"><img src="./styles/acidtech/imageset/site_logo.gif" alt="" title=""></a>
-	</div></div></td>
-</tr><tr><td class="navrow">
+<table border="0" cellspacing="0" cellpadding="0" width="820" id="maintable" align="center" style="margin-top: 25px;"><tr><td class="navrow">
 		<a href="./ucp.php?mode=register">Register</a> • 
 		<a href="./faq.php">FAQ</a>
 		 • <a href="./search.php">Search</a> • <a href="./ucp.php?mode=login">Login</a>
